--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^24.6.1",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.2.1",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "ts-node-dev": "^2.0.0",
